--- a/prototype/index.css
+++ b/prototype/index.css
@@ -9,10 +9,32 @@
 .button-calibrate{
 	margin: 1rem;
 	padding: 1rem;
-	border-radius: 4px;
-	box-shadow: 0 2px 6px 4px rgba(0,0,0,.1);
-	background-color: rgb(245,245,245);
+	width: 3rem;
+	height: 3rem;
+	border-radius: 50%;
+	box-shadow: 0 2px 8px 6px rgba(0,0,0,.1);
+	/*background-color: rgb(245,245,245);*/
 	position: absolute;
+	color: rgba(0,0,0,0);
+	transition: transform .2s;
+}
+.button-calibrate:hover{
+	transform: scale(1.05);
+}
+.button-calibrate__t5{
+	background-color: rgb(255,0,0);
+}
+.button-calibrate__t4{
+	background-color: rgb(150,100,0);
+}
+.button-calibrate__t3{
+	background-color: rgb(100, 150, 0);
+}
+.button-calibrate__t2{
+	background-color: rgb(50, 200, 0);
+}
+.button-calibrate__t1{
+	background-color: rgb(0, 255, 0);
 }
 #cal-1{
 	top: 0;
