--- a/prototype/index.css
+++ b/prototype/index.css
@@ -91,6 +91,26 @@
 	grid-template-columns: 1fr 1fr;
 	gap: 2rem 2rem;
 }
+#controls > input{
+	padding: 1rem;
+	border-radius: 4px;
+	background-color: rgb(240,240,240);
+	border: 1px solid rgb(210,210,210);
+	transition: box-shadow .2s, background-color .2s;
+}
+#controls > input:hover, #controls > input:focus{
+	background-color: rgb(250,250,250);
+}
+#controls > button{
+	padding: 1rem;
+	border-radius: 4px;
+	background-color: rgb(170, 200, 245);
+	border: 1px solid rgb(140,170,215);
+	transition: box-shadow .2s, background-color .2s;
+}
+#controls > button:hover, #controls > button:focus{
+	background-color: rgb(180,210,255);
+}
 #garden{
 	display: none;
 	background-color: green;
