--- a/prototype/index.css
+++ b/prototype/index.css
@@ -113,7 +113,10 @@
 }
 #garden{
 	display: none;
-	background-color: green;
+	background-image: url('./garden.png');
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
 	height: 80vh;
 	flex-direction: column;
 	align-items: center;
