--- a/prototype/index.css
+++ b/prototype/index.css
@@ -74,6 +74,7 @@
 	width: 40px;
 	height: 40px;
 	background-color: rgb(255, 120, 0);
+	transition: top .05s, left .05s;
 }
 
 #instructions{
@@ -89,7 +90,11 @@
 #controls{
 	display: none;
 	grid-template-columns: 1fr 1fr;
-	gap: 2rem 2rem;
+	padding-left: 4rem;
+	padding-right: 4rem;
+	padding-top: 1rem;
+	gap: 1rem 4rem;
+	grid-gap: 1rem 4rem;
 }
 #controls > input{
 	padding: 1rem;
@@ -119,7 +124,14 @@
 	background-size: cover;
 	height: 80vh;
 	flex-direction: column;
+	justify-content: space-between;
 	align-items: center;
+}
+#flowers{
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
 }
 #garden > h1{
 	padding: 1rem;
