--- a/prototype/index.css
+++ b/prototype/index.css
@@ -1,3 +1,43 @@
+#welcome{
+	position: absolute;
+	top: 0;
+	left: 0;
+	background-color: white;
+	width: 100vw;
+	height: 100vh;
+	z-index: 10;
+	opacity: 1;
+	transition: opacity .4s;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 6rem;
+	padding-top: 9rem;
+}
+
+#welcome > h1{
+	padding: 2rem;
+	font-size: 2.6rem;
+}
+#welcome > button{
+	margin-top: 6rem;
+	padding: 1.5rem;
+	padding-left: 2rem;
+	padding-right: 2rem;
+	border-radius: 16px;
+	background-color: rgb(0, 122, 255);
+	box-shadow: 0 2px 12px 4px rgba(0,0,0,.1);
+	transition: box-shadow .2s, background-color .2s, transform .2s;
+}
+#welcome > button:hover{
+	background-color: rgb(10, 132, 255);
+	transform: scale(1.05);
+}
+#welcome > button > h3{
+	color: white;
+}
+
+
 .button-calibrate{
 	margin: 1rem;
 	width: 3rem;
@@ -135,6 +175,7 @@
 }
 #garden > h1{
 	padding: 1rem;
+	font-size: 2.6rem;
 	color: white;
 }
 
